@@ -1,0 +1,1 @@
+ALTER TABLE activity_log ADD COLUMN user_id integer DEFAULT 0 NOT NULL;
