@@ -89,6 +89,7 @@ use_webdav = no
 user_default_shell = "/bin/bash"
 user_display_contact_info = yes
 forge_homepage_widget = no
+use_quicknav_default = yes
 
 scm_single_host = yes
 system_user=fusionforge
